# Xolt

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
examples/: basic_usage.py  chat.py  cli_parent_platform_flow.py  embedding_ide_plugin_loop.py  embedding_queue_worker.py  embedding_web_backend.py  skills_and_agents.py  streaming_task.py
src/xolt/: __about__.py  __init__.py  cli.py  exceptions.py  session.py  tasking.py
src/xolt/backends/: __init__.py  base.py  daytona.py
src/xolt/runtimes/: __init__.py  base.py
src/xolt/runtimes/opencode/: __init__.py  agents.py  client.py  config.py  runtime.py  skills.py  types.py
src/xolt/runtimes/opencode/resources/: __init__.py  agent_manager_prompt.md  manage_skills.md  opencode_proxy.js  skill_finder_prompt.md
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_daytona_backend.py  test_opencode_agents.py  test_opencode_skills.py  test_runtime.py  test_session.py
