[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xolt"
version = "1.0.0"
description = "Managed execution CLI and SDK with backend and runtime adapters."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Pratyush Nag" }]
keywords = ["agents", "automation", "cli", "daytona", "execution", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "daytona>=0.1.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/pratyush/xolt"
Repository = "https://github.com/pratyush/xolt"
Issues = "https://github.com/pratyush/xolt/issues"

[project.scripts]
xolt = "xolt.cli:main"

[dependency-groups]
dev = [
    "build>=1.2.2",
    "coverage[toml]>=7.6",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xolt"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/xolt",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "/CODE_OF_CONDUCT.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["xolt"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["aiohttp.*", "daytona.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/xolt"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
